--- a/src/ProductCategories.css
+++ b/src/ProductCategories.css
@@ -3,19 +3,24 @@
     flex-direction: row;
     position: sticky !important;
     justify-content: space-evenly;
-    border-bottom: 1px solid lightgrey;
+    border-bottom: 2px solid lightgrey;
     max-width: 1400px;
+    top: 0;
+    z-index: 999;
+    height: 50px;
+    background-color: white;
     margin-left: auto;
     margin-right: auto;
 }
 .productCateroies > p{
     font-weight: 500;
+    margin-top: 10px;
     font-size: 15px;
     margin-bottom: 3px;
     cursor: pointer;
 }
 .productCateroies > p:hover{
    color:lightseagreen;
-   border-bottom: 2px solid lightseagreen;
+   border-bottom: 4px solid lightseagreen;
 
 }
