--- a/src/Header.css
+++ b/src/Header.css
@@ -2,7 +2,9 @@
     display: flex;
     flex-direction: row;
     padding: 10px;
-    margin: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1700px;
     position: sticky !important;
     margin-top: 0px;
     justify-content: space-evenly;
