--- a/src/Product.css
+++ b/src/Product.css
@@ -13,6 +13,6 @@
     width: 100%;
     display: flex;
     margin-top: 50px;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 
